@@ -5,7 +5,8 @@ Changelog
 2.4.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Overview: Made download copy link conditionally.
+  [phgross]
 
 
 2.4.1 (2012-11-28)
